SASS-5794 Create connector to income-tax-tailor-return

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,6 +45,12 @@ microservice {
         host     = localhost
         port     = 9514
       }
+
+      income-tax-tailor-return {
+         protocol = http
+         host     = localhost
+         port     = 9383
+      }
     }
 }
 
