--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,6 +20,10 @@ play.http.router = prod.Routes
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:9250 localhost:12345 www.google-analytics.com www.googletagmanager.com"
 
+bootstrap.filters.allowlist.enabled = false
+bootstrap.filters.allowlist.ips = []
+bootstrap.filters.allowlist.redirectUrlWhenDenied = "http://www.gov.uk"
+
 play.http.errorHandler = "handlers.ErrorHandler"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
@@ -44,6 +48,12 @@ microservice {
         protocol = http
         host     = localhost
         port     = 9514
+      }
+
+      income-tax-tailor-return {
+         protocol = http
+         host     = localhost
+         port     = 9383
       }
     }
 }
