[SASS-5680] update auth rebased

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,6 +55,12 @@ microservice {
          host     = localhost
          port     = 9383
       }
+
+      income-tax-submission-frontend {
+         protocol = http
+         host     = localhost
+         port     = 9302
+      }
     }
 }
 
