update config feedback and service links

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,23 +43,10 @@ microservice {
         host     = localhost
         port     = 8500
       }
-
-      feedback-frontend {
-        protocol = http
-        host     = localhost
-        port     = 9514
-      }
-
       income-tax-tailor-return {
          protocol = http
          host     = localhost
          port     = 9383
-      }
-
-      income-tax-submission-frontend {
-         protocol = http
-         host     = localhost
-         port     = 9302
       }
     }
 }
@@ -67,7 +54,11 @@ microservice {
 
 contact-frontend {
   host      = "http://localhost:9250"
-  serviceId = "income-tax-tailor-returns-frontend"
+  serviceId = "update-and-submit-income-tax-return"
+}
+
+feedback-frontend {
+  host = "http://localhost:9514"
 }
 
 timeout-dialog {
@@ -83,6 +74,7 @@ urls {
   login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
   loginContinue = "http://localhost:9000/income-tax-tailor-returns-frontend"
   signOut       = "http://localhost:9025/gg/sign-out"
+  ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
 }
 
 host = "http://localhost:9000"
