--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,9 +27,7 @@ bootstrap.filters.allowlist.redirectUrlWhenDenied = "http://www.gov.uk"
 play.http.errorHandler = "handlers.ErrorHandler"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
-play.modules.enabled += "uk.gov.hmrc.play.audit.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "config.Module"
 
@@ -43,13 +41,6 @@ microservice {
         host     = localhost
         port     = 8500
       }
-
-      feedback-frontend {
-        protocol = http
-        host     = localhost
-        port     = 9514
-      }
-
       income-tax-tailor-return {
          protocol = http
          host     = localhost
@@ -61,7 +52,11 @@ microservice {
 
 contact-frontend {
   host      = "http://localhost:9250"
-  serviceId = "income-tax-tailor-returns-frontend"
+  serviceId = "update-and-submit-income-tax-return"
+}
+
+feedback-frontend {
+  host = "http://localhost:9514"
 }
 
 timeout-dialog {
@@ -77,6 +72,7 @@ urls {
   login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
   loginContinue = "http://localhost:9000/income-tax-tailor-returns-frontend"
   signOut       = "http://localhost:9025/gg/sign-out"
+  ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
 }
 
 host = "http://localhost:9000"
