SASS-5676: J-1 new Create 'UK residence status' page - About you - TYR II

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,3 +88,7 @@ tracking-consent-frontend {
 features {
   welsh-translation: true
 }
+
+external-urls{
+    checkResidenceStatus = "https://www.tax.service.gov.uk/guidance/check-your-UK-residence-status/start/choose-tax-year"
+}
