[SASS-5899] Early private launch setup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,7 +86,8 @@ tracking-consent-frontend {
 }
 
 features {
-  welsh-translation: true
+  welsh-translation = true
+  earlyPrivateLaunch = false
 }
 
 external-urls {
