SASS-5709: Navigation of 'About you' section - TYR II

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,6 +89,7 @@ tracking-consent-frontend {
 features {
   welsh-translation = true
   earlyPrivateLaunch = false
+  privateBeta = true
 }
 
 external-urls {
