SASS-5704: Create 'Tax avoidance schemes' page About you - TYR II

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,9 +89,11 @@ tracking-consent-frontend {
 features {
   welsh-translation = true
   earlyPrivateLaunch = false
-  privateBeta = true
+  privateBeta = false
 }
 
 external-urls {
     checkResidenceStatus = "https://www.tax.service.gov.uk/guidance/check-your-UK-residence-status/start/choose-tax-year"
+    understandingTaxAvoidance = "https://www.gov.uk/guidance/tax-avoidance-an-introduction"
+    understandingRemuneration = "https://www.gov.uk/guidance/tax-avoidance-an-introduction"
 }
