--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,7 +89,7 @@ tracking-consent-frontend {
 features {
   welsh-translation = true
   earlyPrivateLaunch = false
-  privateBeta = false
+  privateBeta = true
 }
 
 external-urls {
