SASS-5694 Create Charitable donations page About you

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,7 +89,7 @@ tracking-consent-frontend {
 features {
   welsh-translation = true
   earlyPrivateLaunch = false
-  privateBeta = true
+  privateBeta = false
 }
 
 external-urls {
