Update CSP in configs and tests

--- a/test/resources/test.application.conf
+++ b/test/resources/test.application.conf
@@ -12,13 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-play.filters.disabled += "play.filters.csrf.CSRFFilter"
+include "application.conf"
+
+play.filters.disabled += play.filters.csrf.CSRFFilter
+play.filters.disabled += "play.filters.csp.CSPFilter"
 
 play.http.secret.key = "some_secret"
-
-mongo-async-driver {
-  akka {
-    log-dead-letters-during-shutdown = off
-    log-dead-letters = 0
-  }
-}
