--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,8 +18,6 @@ appName="income-tax-tailor-returns-frontend"
 
 play.http.router = prod.Routes
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:9250 localhost:12345 www.google-analytics.com www.googletagmanager.com"
-
 bootstrap.filters.allowlist.enabled = false
 bootstrap.filters.allowlist.ips = []
 bootstrap.filters.allowlist.redirectUrlWhenDenied = "http://www.gov.uk"
@@ -30,6 +28,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "config.Module"
+
+play.filters.enabled += "play.filters.csp.CSPFilter"
 
 play.i18n.langs = ["en", "cy"]
 
