content for payments into pensions page (english only)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -97,4 +97,6 @@ external-urls {
     understandingTaxAvoidance = "https://www.gov.uk/guidance/tax-avoidance-an-introduction"
     understandingRemuneration = "https://www.gov.uk/guidance/tax-avoidance-an-introduction"
     unauthorisedPayments = "https://www.gov.uk/guidance/pension-schemes-and-unauthorised-payments"
+    overseasTransferCharge = "https://www.gov.uk/guidance/overseas-pensions-pension-transfers"
+
 }
