SASS-6284: Updated Views, Forms, Model, Routes and Tests for UkDividendsSharesLoans

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,5 +98,6 @@ external-urls {
     understandingRemuneration = "https://www.gov.uk/guidance/tax-avoidance-an-introduction"
     unauthorisedPayments = "https://www.gov.uk/guidance/pension-schemes-and-unauthorised-payments"
     overseasTransferCharge = "https://www.gov.uk/guidance/overseas-pensions-pension-transfers"
-
+    taxOnDividends = "https://www.gov.uk/tax-on-dividends"
+    authorisedInvestmentFunds = "https://www.gov.uk/guidance/authorised-investment-funds"
 }
