Upgrade play version to latest

--- a/test/resources/test.application.conf
+++ b/test/resources/test.application.conf
@@ -17,4 +17,4 @@ include "application.conf"
 play.filters.disabled += play.filters.csrf.CSRFFilter
 play.filters.disabled += "play.filters.csp.CSPFilter"
 
-play.http.secret.key = "some_secret"
+play.http.secret.key = "NIDRXm4tVMhUL0FK1iySueiS6uED8BW6ppG4Qi9VHSw="
