SASS-7552: replace references to akka

--- a/it/resources/application.conf
+++ b/it/resources/application.conf
@@ -12,13 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-akka {
+pekko {
   log-dead-letters = 10
   log-dead-letters-during-shutdown = on
 }
 
 mongo-async-driver {
-  akka {
+  pekko {
 
     loglevel = ERROR
   }
