SASS-7873 updated agents redirect and signup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,4 +100,6 @@ external-urls {
     overseasTransferCharge = "https://www.gov.uk/guidance/overseas-pensions-pension-transfers"
     taxOnDividends = "https://www.gov.uk/tax-on-dividends"
     authorisedInvestmentFunds = "https://www.gov.uk/guidance/authorised-investment-funds"
+    mtd-subscription-service = "https://www.gov.uk/guidance/use-software-to-send-income-tax-updates"
+    set-up-agent-services-account = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
 }
