SASS-8194 Redirect to submission frontend tasklist

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,10 @@ microservice {
          host     = localhost
          port     = 9383
       }
+
+      income-tax-submission-frontend {
+         url = "http://localhost:9302"
+      }
     }
 }
 
