SASS-8414: Update the Sign-Up link in Tailoring

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,6 +78,8 @@ urls {
   signOut       = "http://localhost:9025/gg/sign-out"
   ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
   allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
+  mtd-subscription-service-agent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
+  mtd-subscription-service-individual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
 }
 
 host = "http://localhost:10007"
@@ -104,6 +106,5 @@ external-urls {
     overseasTransferCharge = "https://www.gov.uk/guidance/overseas-pensions-pension-transfers"
     taxOnDividends = "https://www.gov.uk/tax-on-dividends"
     authorisedInvestmentFunds = "https://www.gov.uk/guidance/authorised-investment-funds"
-    mtd-subscription-service = "https://www.gov.uk/guidance/use-software-to-send-income-tax-updates"
     set-up-agent-services-account = "https://www.gov.uk/guidance/get-an-hmrc-agent-services-account"
 }
