--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,10 +78,9 @@ urls {
   signOut       = "http://localhost:9025/gg/sign-out"
   ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
   allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
-  mtd-subscription-service-agent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
-  mtd-subscription-service-individual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
+  signUpAgent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
+  signUpIndividual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
 }
-
 host = "http://localhost:10007"
 
 accessibility-statement{
