SASS-8425 Added linear journey to common task list items

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,6 +33,8 @@ play.filters.enabled += "play.filters.csp.CSPFilter"
 
 play.i18n.langs = ["en", "cy"]
 
+host = "http://localhost:10007"
+
 microservice {
 
     services {
@@ -41,6 +43,7 @@ microservice {
         host     = localhost
         port     = 8500
       }
+
       income-tax-tailor-return {
          protocol = http
          host     = localhost
@@ -49,6 +52,30 @@ microservice {
 
       income-tax-submission-frontend {
          url = "http://localhost:9302"
+      }
+
+      personal-income-tax-submission-frontend {
+        url = "http://localhost:9308"
+      }
+
+      income-tax-pensions-frontend {
+        url = "http://localhost:9321"
+      }
+
+      income-tax-state-benefits-frontend {
+        url = "http://localhost:9376"
+      }
+
+      income-tax-pensions-frontend {
+        url = "http://localhost:9321"
+      }
+
+      income-tax-employment-frontend {
+        url = "http://localhost:9317"
+      }
+
+      income-tax-cis-frontend {
+        url = "http://localhost:9338"
       }
     }
 }
@@ -81,7 +108,6 @@ urls {
   signUpAgent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
   signUpIndividual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
 }
-host = "http://localhost:10007"
 
 accessibility-statement{
   service-path = "/income-tax-tailor-returns-frontend"
