SASS-8670: Add gains url to config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -73,6 +73,10 @@ microservice {
       income-tax-cis-frontend {
         url = "http://localhost:9338"
       }
+
+      income-tax-additional-information-frontend {
+        url = "http://localhost:10005"
+      }
     }
 }
 
