WIP- session cookie changes to consume session data from vc service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,6 +77,10 @@ microservice {
       income-tax-additional-information-frontend {
         url = "http://localhost:10005"
       }
+
+      income-tax-session-data{
+        url = "http://localhost:10005"
+      }
     }
 }
 
