WIP- session cookie test fixes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,7 @@ microservice {
       }
 
       income-tax-session-data{
-        url = "http://localhost:10005"
+        url = "http://localhost:9000"
       }
     }
 }
@@ -125,6 +125,7 @@ features {
   welsh-translation = true
   earlyPrivateLaunch = false
   privateBeta = true
+  sessionCookieService = false
 }
 
 external-urls {
