Fixed test cases after auth changes with delegated auth rule

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -111,6 +111,7 @@ urls {
   allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
   signUpAgent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
   signUpIndividual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
+  viewAndChangeEnterUtrUrl = "http://localhost:9589/report-quarterly/income-and-expenses/view/agents/client-utr"
 }
 
 accessibility-statement{
