--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,6 +77,10 @@ microservice {
       income-tax-additional-information-frontend {
         url = "http://localhost:10005"
       }
+
+      income-tax-session-data{
+        url = "http://localhost:30027"
+      }
     }
 }
 
@@ -107,6 +111,7 @@ urls {
   allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
   signUpAgent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
   signUpIndividual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
+  viewAndChangeEnterUtrUrl = "http://localhost:9589/report-quarterly/income-and-expenses/view/agents/client-utr"
 }
 
 accessibility-statement{
@@ -121,6 +126,7 @@ features {
   welsh-translation = true
   earlyPrivateLaunch = false
   privateBeta = true
+  sessionCookieService = false
 }
 
 external-urls {
