changed the way config is read for session data service, to fix staging issue

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,9 @@ microservice {
       }
 
       income-tax-session-data{
-        url = "http://localhost:30027"
+        protocol = http
+        host     = localhost
+        port     = 30027
       }
     }
 }
@@ -126,7 +128,7 @@ features {
   welsh-translation = true
   earlyPrivateLaunch = false
   privateBeta = true
-  sessionCookieService = false
+  sessionCookieService = true
 }
 
 external-urls {
