changed flag to false as default value

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -128,7 +128,7 @@ features {
   welsh-translation = true
   earlyPrivateLaunch = false
   privateBeta = true
-  sessionCookieService = true
+  sessionCookieService = false
 }
 
 external-urls {
