changed the way config is read for session data service, to fix stagi… (#118)
* changed the way config is read for session data service, to fix staging issue

* changed flag to false as default value

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,9 @@ microservice {
       }
 
       income-tax-session-data{
-        url = "http://localhost:30027"
+        protocol = http
+        host     = localhost
+        port     = 30027
       }
     }
 }
