SASS-10665 Enabling Multi-Agent for income-tax-tailor-returns-frontend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,7 @@ features {
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
+  ema-supporting-agents-enabled = true
 }
 
 external-urls {
