SASS-10665 Changed from features -> feature-switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,7 +124,7 @@ tracking-consent-frontend {
   gtm.container = "transitional"
 }
 
-features {
+feature-switch {
   welsh-translation = true
   earlyPrivateLaunch = false
   privateBeta = true
