--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,11 +124,12 @@ tracking-consent-frontend {
   gtm.container = "transitional"
 }
 
-features {
+feature-switch {
   welsh-translation = true
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
+  ema-supporting-agents-enabled = true
 }
 
 external-urls {
