--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,6 +130,7 @@ feature-switch {
   privateBeta = true
   sessionCookieService = false
   ema-supporting-agents-enabled = true
+  isPrePopEnabled = false
 }
 
 external-urls {
