SASS-11074: Add connector for interfacing with state benefits backend. Add parser for connections with backend microservices. Add testing for the parser. Still need to add testing for the connector. Add PrePopulationService. Add model for state benefits pre-pop and test the reads for it. Move some files around for consistency

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,6 +62,10 @@ microservice {
         url = "http://localhost:9376"
       }
 
+      income-tax-state-benefits {
+        url = "http://localhost:9377"
+      }
+
       income-tax-pensions-frontend {
         url = "http://localhost:9321"
       }
