--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,7 +134,7 @@ feature-switch {
   privateBeta = true
   sessionCookieService = false
   ema-supporting-agents-enabled = true
-  isPrePopEnabled = false
+  isPrePopEnabled = true
 }
 
 external-urls {
