--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,6 +78,10 @@ microservice {
         url = "http://localhost:9338"
       }
 
+      income-tax-cis {
+        url = "http://localhost:9328"
+      }
+
       income-tax-additional-information-frontend {
         url = "http://localhost:10005"
       }
