--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,6 +66,10 @@ microservice {
         url = "http://localhost:9377"
       }
 
+      income-tax-state-employment {
+              url = "http://localhost:9315"
+            }
+
       income-tax-pensions-frontend {
         url = "http://localhost:9321"
       }
