SASS-11227: Enabling Multi- Agent for Income-tax-tailor-return - Frontend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,10 +62,6 @@ microservice {
         url = "http://localhost:9376"
       }
 
-      income-tax-state-benefits {
-        url = "http://localhost:9377"
-      }
-
       income-tax-pensions-frontend {
         url = "http://localhost:9321"
       }
@@ -78,12 +74,12 @@ microservice {
         url = "http://localhost:9338"
       }
 
-      income-tax-cis {
-        url = "http://localhost:9328"
-      }
-
       income-tax-additional-information-frontend {
         url = "http://localhost:10005"
+      }
+
+      view-and-change {
+        url = "http://localhost:9081"
       }
 
       income-tax-session-data {
@@ -119,9 +115,9 @@ urls {
   signOut       = "http://localhost:9025/gg/sign-out"
   ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
   allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
-  signUpAgent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
-  signUpIndividual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
-  viewAndChangeEnterUtrUrl = "http://localhost:9589/report-quarterly/income-and-expenses/view/agents/client-utr"
+  signUpAgent = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility/client"
+  signUpIndividual = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility"
+  viewAndChangeEnterUtrUrl = "http://localhost:9081/report-quarterly/income-and-expenses/view/agents/client-utr"
 }
 
 accessibility-statement{
@@ -137,8 +133,7 @@ feature-switch {
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
-  ema-supporting-agents-enabled = true
-  isPrePopEnabled = true
+  isPrePopEnabled = false
 }
 
 external-urls {
