--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,10 @@ microservice {
         url = "http://localhost:10005"
       }
 
+      view-and-change {
+        url = "http://localhost:9081"
+      }
+
       income-tax-session-data {
         protocol = http
         host     = localhost
@@ -119,9 +123,9 @@ urls {
   signOut       = "http://localhost:9025/gg/sign-out"
   ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
   allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
-  signUpAgent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
-  signUpIndividual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
-  viewAndChangeEnterUtrUrl = "http://localhost:9589/report-quarterly/income-and-expenses/view/agents/client-utr"
+  signUpAgent = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility/client"
+  signUpIndividual = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility"
+  viewAndChangeEnterUtrUrl = "http://localhost:9081/report-quarterly/income-and-expenses/view/agents/client-utr"
 }
 
 accessibility-statement{
@@ -137,7 +141,6 @@ feature-switch {
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
-  ema-supporting-agents-enabled = true
   isPrePopEnabled = true
 }
 
