--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,7 +78,11 @@ microservice {
         url = "http://localhost:10005"
       }
 
-      income-tax-session-data{
+      view-and-change {
+        url = "http://localhost:9081"
+      }
+
+      income-tax-session-data {
         protocol = http
         host     = localhost
         port     = 30027
@@ -111,9 +115,9 @@ urls {
   signOut       = "http://localhost:9025/gg/sign-out"
   ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
   allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
-  signUpAgent = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility/client"
-  signUpIndividual = "http://localhost:9589/report-quarterly/income-and-expenses/sign-up/eligibility"
-  viewAndChangeEnterUtrUrl = "http://localhost:9589/report-quarterly/income-and-expenses/view/agents/client-utr"
+  signUpAgent = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility/client"
+  signUpIndividual = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility"
+  viewAndChangeEnterUtrUrl = "http://localhost:9081/report-quarterly/income-and-expenses/view/agents/client-utr"
 }
 
 accessibility-statement{
@@ -129,7 +133,6 @@ feature-switch {
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
-  ema-supporting-agents-enabled = true
   isPrePopEnabled = false
 }
 
