--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,6 +62,10 @@ microservice {
         url = "http://localhost:9376"
       }
 
+      income-tax-state-benefits {
+        url = "http://localhost:9377"
+      }
+
       income-tax-pensions-frontend {
         url = "http://localhost:9321"
       }
@@ -78,7 +82,7 @@ microservice {
         url = "http://localhost:10005"
       }
 
-      income-tax-session-data{
+      income-tax-session-data {
         protocol = http
         host     = localhost
         port     = 30027
@@ -130,7 +134,7 @@ feature-switch {
   privateBeta = true
   sessionCookieService = false
   ema-supporting-agents-enabled = true
-  isPrePopEnabled = false
+  isPrePopEnabled = true
 }
 
 external-urls {
