--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,6 +62,10 @@ microservice {
         url = "http://localhost:9376"
       }
 
+      income-tax-state-benefits {
+        url = "http://localhost:9377"
+      }
+
       income-tax-pensions-frontend {
         url = "http://localhost:9321"
       }
@@ -72,6 +76,10 @@ microservice {
 
       income-tax-cis-frontend {
         url = "http://localhost:9338"
+      }
+
+      income-tax-cis {
+        url = "http://localhost:9328"
       }
 
       income-tax-additional-information-frontend {
@@ -133,7 +141,7 @@ feature-switch {
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
-  isPrePopEnabled = false
+  isPrePopEnabled = true
 }
 
 external-urls {
