SASS-11227: Enabling Multi- Agent for Income-tax-tailor-return - Frontend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -141,7 +141,7 @@ feature-switch {
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
-  isPrePopEnabled = true
+  isPrePopEnabled = false
 }
 
 external-urls {
