SASS-11074: Fix employment url in config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,7 +66,7 @@ microservice {
         url = "http://localhost:9377"
       }
 
-      income-tax-state-employment {
+      income-tax-employment {
         url = "http://localhost:9315"
       }
 
