SASS-11154 Employment Pre-pop Integration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -145,7 +145,7 @@ feature-switch {
   earlyPrivateLaunch = false
   privateBeta = true
   sessionCookieService = false
-  isPrePopEnabled = false
+  isPrePopEnabled = true
 }
 
 external-urls {
