SASS-11298: Perform end to end testing for the Property backend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,10 @@ microservice {
         url = "http://localhost:9328"
       }
 
+      income-tax-property {
+        url = "http://localhost:19160"
+      }
+
       income-tax-additional-information-frontend {
         url = "http://localhost:10005"
       }
