SASS-11074: Add fallback feature switch + some config changes to support mocking

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -150,6 +150,7 @@ feature-switch {
   privateBeta = true
   sessionCookieService = false
   isPrePopEnabled = true
+  sessionFallbackEnabled = true
 }
 
 external-urls {
