[SASS-11598] Add UkProperty, ForeignProperty and UkForeignPropery to saved tailoring task list data

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,10 @@ microservice {
         url = "http://localhost:9328"
       }
 
+      income-tax-property-frontend {
+        url = "http://localhost:19161"
+      }
+
       income-tax-property {
         url = "http://localhost:19160"
       }
