[SASS-11619] Improve host entry name for v&c µService

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -94,7 +94,7 @@ microservice {
         url = "http://localhost:10005"
       }
 
-      view-and-change {
+      income-tax-view-change-frontend {
         url = "http://localhost:9081"
       }
 
