MIPR-2024 update dependencies

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,7 +134,7 @@ urls {
   loginContinue = "http://localhost:10007/update-and-submit-income-tax-return/tailored-return"
   signOut       = "http://localhost:9025/gg/sign-out"
   ivUplift      = "http://localhost:9302/update-and-submit-income-tax-return/iv-uplift"
-  allowedRedirects = ["localhost", "www.tax.service.gov.uk"]
+  allowedRedirects = ["localhost", "www.qa.tax.service.gov.uk", "www.staging.tax.service.gov.uk", "www.tax.service.gov.uk"]
   signUpAgent = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility/client"
   signUpIndividual = "http://localhost:9081/report-quarterly/income-and-expenses/sign-up/eligibility"
   viewAndChangeEnterUtrUrl = "http://localhost:9081/report-quarterly/income-and-expenses/view/agents/client-utr"
